tests/cases/scc/error/0022-cpp-if.c.res
./tests/cases/scc/error/0022-cpp-if.c:8:27:	error:   expected , before the ) token.
exit code 1
